// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withLegacyPlanPaywall should not render the passed component when the current subscription is legacy 1`] = `
<div>
  <div
    data-testid="custom-paywall-component"
  >
    Custom Paywall
  </div>
</div>
`;

exports[`withLegacyPlanPaywall should render the passed component when thus subscription is public 1`] = `
<div>
  <div
    data-testid="paywalled-component"
  >
    Just a component...
  </div>
</div>
`;
